--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
     "client": "cd client && npm start",
     "start": "nodemon index.js",
     "dev": "concurrently -n 'server,client' -c 'red,green' \"npm run start\" \"npm run client\""
