--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4"
+    "dotenv": "^8.2.0"
   }
 }
