--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node index.js",
     "client": "cd client && npm start",
-    "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon index.js\" \"npm run client\""
+    "start": "nodemon index.js",
+    "dev": "concurrently -n 'server,client' -c 'red,green' \"npm run start\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,6 @@
     "shortid": "^2.2.15",
     "nodemon": "^2.0.4",
     "dotenv": "^8.2.0"
-  }
+  },
+  "homepage": "https://link-shortener-task.herokuapp.com/"
 }
